--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,3 +1,5 @@
+<% set_breadcrumbs [["Todos", todos_path]] %>
+
 <% turbo_refreshes_with method: :morph, scroll: :preserve %>
 
 <p style="color: green"><%= notice %></p>
