--- a/app/views/layouts/hotel_base.html.erb
+++ b/app/views/layouts/hotel_base.html.erb
@@ -44,7 +44,7 @@
      data-slide-drawer-backdrop-hide-class="!opacity-0 invisible"
      data-slide-drawer-drawer-hide-class="translate-x-[768px]"
 >
-  <div class="!opacity-0 invisible transition-all duration-500 fixed h-full w-full z-20 bg-black top-0 left-0"
+  <div class="!opacity-0 invisible transition-all duration-500 fixed h-full w-full z-20 bg-black opacity-50 top-0 left-0"
        data-slide-drawer-target="backdrop"
        data-action="click->slide-drawer#hide:prevent">
   </div>
