iphone react version

--- a/app/views/components/_iphone_color_option.html.erb
+++ b/app/views/components/_iphone_color_option.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (value:, color:, iphone:, selected:) %>
+<%# locals: (value:, color:, selected:) %>
 <%= label_tag [:color, value].join('_'),
               data: {
                 action: "mouseenter->iphone-static#setColorText mouseleave->iphone-static#resetColorText",
