--- a/app/views/components/iphone.html.erb
+++ b/app/views/components/iphone.html.erb
@@ -73,23 +73,19 @@
             <%= render 'iphone_color_option',
                        value: "naturaltitanium",
                        color: "bg-gray-400",
-                       selected: true,
-                       iphone: {} %>
+                       selected: true %>
             <%= render 'iphone_color_option',
                        value: "bluetitanium",
                        color: "bg-indigo-800",
-                       selected: false,
-                       iphone: {} %>
+                       selected: false %>
             <%= render 'iphone_color_option',
                        value: "whitetitanium",
                        color: "bg-white",
-                       selected: false,
-                       iphone: {} %>
+                       selected: false %>
             <%= render 'iphone_color_option',
                        value: "blacktitanium",
                        color: "bg-black",
-                       selected: false,
-                       iphone: {} %>
+                       selected: false %>
           <% end %>
         <% end %>
       </div>
