--- a/app/views/react/iphone.html.erb
+++ b/app/views/react/iphone.html.erb
@@ -19,6 +19,7 @@
 
 <% if @catalog_data %>
   <script type="application/json" id="catalog-data">
+    <% @catalog_data[:images].transform_values! { image_path(_1) } %>
     <%= @catalog_data.to_json.html_safe %>
   </script>
 <% end %>
