hardcode react_iphone asset

--- a/app/views/react/iphone.html.erb
+++ b/app/views/react/iphone.html.erb
@@ -10,7 +10,7 @@
   <%= yield :head %>
 
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-  <%= javascript_include_tag "react_#{@template}", "data-turbo-track": "reload", type: "module" %>
+  <%= javascript_include_tag "react_iphone", "data-turbo-track": "reload", type: "module" %>
 </head>
 
 <body>
