--- a/app/views/iphones/_iphone.html.erb
+++ b/app/views/iphones/_iphone.html.erb
@@ -8,6 +8,10 @@
   </div>
 
   <div class="pt-12 pb-6">
+    <div class="float-right mr-6">
+      <%= button_to "Clear Order", iphone_path, method: :delete,
+                    class: "bg-orange-600 p-1 border rounded text-white active:bg-orange-700" %>
+    </div>
     <h1 class="text-5xl">Buy iPhone 15 Pro</h1>
     <div class="text-sm mt-4 text-light">From $1399 or $58.29/mo. for 24 mo.<sup>*</sup></div>
   </div>
