--- a/app/views/react/iphone.html.erb
+++ b/app/views/react/iphone.html.erb
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-<div id="root"></div>
+<div class="container container-lg mx-auto px-4 pt-16">
+  <div class="mx-auto min-w-[1028px] lg:max-w-5xl">
+    <div id="root"></div>
+  </div>
+</div>
 </body>
 
 <% if @catalog_data %>
