--- a/app/views/components/iphone.html.erb
+++ b/app/views/components/iphone.html.erb
@@ -1,111 +1,115 @@
-<% set_breadcrumbs [["iPhone Static", component_path(:iphone)]] %>
-<%
-  @catalog_data[:images].transform_values! { image_path(_1) }
-%>
-<%= tag.div data: { controller: "iphone-static", iphone_static_catalog_data_value: @catalog_data },
-            class: "relative" do %>
-  <div class="text-xl z-10 font-bold sticky top-14 right-0 h-8 w-full">
-    <div class="ml-auto p-2 bg-white text-center w-[400px] shadow">
-      <span data-iphone-static-target="price"></span>
-      for 24 mo.*
+<div class="mx-auto min-w-[1028px] lg:max-w-5xl">
+  <% set_breadcrumbs [["iPhone Static", component_path(:iphone)]] %>
+  <%
+    @catalog_data[:images].transform_values! { image_path(_1) }
+  %>
+  <%= tag.div data: { controller: "iphone-static", iphone_static_catalog_data_value: @catalog_data } do %>
+    <div class="text-xl z-10 font-bold sticky top-0 right-0 h-8 w-full">
+      <div class="animate-bounce ml-auto p-2 bg-white text-center w-[400px]">
+        <span data-iphone-static-target="price"></span>
+        for 24 mo.*
+      </div>
     </div>
-  </div>
 
-  <div class="pt-12 pb-6">
-    <h1 class="text-5xl">Buy iPhone 15 Pro</h1>
-    <div class="text-sm mt-4 text-light">From $1399 or $58.29/mo. for 24 mo.<sup>*</sup></div>
-  </div>
-
-  <%= tag.div class: "flex" do %>
-    <div class="shrink-0 sticky top-0 w-[592px] h-[460px]">
-      <%= image_tag "",
-                    class: "object-cover w-[592px] h-[460px] rounded-[20px]",
-                    data: { iphone_static_target: "image" }
-      %>
+    <div class="pt-12 pb-6">
+      <div class="float-right mr-6">
+        <a href="" class="bg-orange-600 p-1 border rounded text-white active:bg-orange-700">Clear Order</a>
+      </div>
+      <h1 class="text-5xl">Buy iPhone 15 Pro</h1>
+      <div class="text-sm mt-4 text-light">From $1399 or $58.29/mo. for 24 mo.<sup>*</sup></div>
     </div>
-    <div class="pl-10">
-      <div>
-        <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">Which is best for you?</span></h2>
+
+    <%= tag.div class: "flex" do %>
+      <div class="shrink-0 sticky top-0 w-[592px] h-[460px]">
+        <%= image_tag "",
+                      class: "object-cover w-[592px] h-[460px] rounded-[20px]",
+                      data: { iphone_static_target: "image" }
+        %>
+      </div>
+      <div class="pl-10">
         <div>
-          <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
-                           data: { iphone_static_target: "modelForm" } do %>
-            <% [{ model: "6-1inch", title: "iPhone 15 Pro", subtitle: "6.1-inch display" },
-                { model: "6-7inch", title: "iPhone 15 Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
-              <%= render 'iphone_option',
-                         name: :model,
-                         value: attributes[:model],
-                         selected: false,
-                         title: attributes[:title],
-                         subtitle: attributes[:subtitle],
-                         pricing_lines: []
-              %>
+          <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">Which is best for you?</span></h2>
+          <div>
+            <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
+                             data: { iphone_static_target: "modelForm" } do %>
+              <% [{ model: "6-1inch", title: "iPhone 15 Pro", subtitle: "6.1-inch display" },
+                  { model: "6-7inch", title: "iPhone 15 Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
+                <%= render 'iphone_option',
+                           name: :model,
+                           value: attributes[:model],
+                           selected: false,
+                           title: attributes[:title],
+                           subtitle: attributes[:subtitle],
+                           pricing_lines: []
+                %>
+              <% end %>
+            <% end %>
+            <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
+              <div class="text-sm">
+                <div class="font-bold">Need help choosing a model?</div>
+                <div class="font-light">Explore the differences in screen size and battery life</div>
+              </div>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-48">
+          <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">Pick your favorite</span></h2>
+          <%= tag.div do %>
+            <div class="text-xl my-4" data-iphone-static-target="colorText"><%= "Foo color name" %></div>
+
+            <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
+                             data: { iphone_static_target: "colorForm" } do %>
+              <% [{ color: "naturaltitanium", class: "bg-gray-400" },
+                  { color: "bluetitanium", class: "bg-indigo-800" },
+                  { color: "whitetitanium", class: "bg-white" },
+                  { color: "blacktitanium", class: "bg-black" }].each do |attributes| %>
+
+                <%= render 'iphone_color_option',
+                           value: attributes[:color],
+                           color: attributes[:class],
+                           selected: false %>
+              <% end %>
             <% end %>
           <% end %>
-          <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
-            <div class="text-sm">
-              <div class="font-bold">Need help choosing a model?</div>
-              <div class="font-light">Explore the differences in screen size and battery life</div>
-            </div>
-            <div>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-              </svg>
+        </div>
+
+        <div class="mt-48">
+          <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">How much space do you need?</span></h2>
+          <div>
+            <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
+                             data: { iphone_static_target: "ramForm" } do %>
+              <% [{ value: "256GB", title: "256GB<sup>2</sup>".html_safe },
+                  { value: "512GB", title: "512GB<sup>*</sup>".html_safe },
+                  { value: "1TB", title: "1TB<sup>2</sup>".html_safe },
+                 ].each do |attributes| %>
+                <%= render 'iphone_option',
+                           name: :ram,
+                           value: attributes[:value],
+                           selected: false,
+                           title: attributes[:title],
+                           pricing_lines: [] %>
+              <% end %>
+            <% end %>
+            <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
+              <div class="text-sm">
+                <div class="font-bold">Need help choosing a model?</div>
+                <div class="font-light">Explore the differences in screen size and battery life</div>
+              </div>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="mt-48">
-        <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">Pick your favorite</span></h2>
-        <%= tag.div do %>
-          <div class="text-xl my-4" data-iphone-static-target="colorText"><%= "Foo color name" %></div>
-
-          <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
-                           data: { iphone_static_target: "colorForm" } do %>
-            <% [{ color: "naturaltitanium", class: "bg-gray-400" },
-                { color: "bluetitanium", class: "bg-indigo-800" },
-                { color: "whitetitanium", class: "bg-white" },
-                { color: "blacktitanium", class: "bg-black" }].each do |attributes| %>
-
-              <%= render 'iphone_color_option',
-                         value: attributes[:color],
-                         color: attributes[:class],
-                         selected: false %>
-            <% end %>
-          <% end %>
-        <% end %>
-      </div>
-
-      <div class="mt-48">
-        <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">How much space do you need?</span></h2>
-        <div>
-          <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
-                           data: { iphone_static_target: "ramForm" } do %>
-            <% [{ value: "256GB", title: "256GB<sup>2</sup>".html_safe },
-                { value: "512GB", title: "512GB<sup>*</sup>".html_safe },
-                { value: "1TB", title: "1TB<sup>2</sup>".html_safe },
-               ].each do |attributes| %>
-              <%= render 'iphone_option',
-                         name: :ram,
-                         value: attributes[:value],
-                         selected: false,
-                         title: attributes[:title],
-                         pricing_lines: [] %>
-            <% end %>
-          <% end %>
-          <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
-            <div class="text-sm">
-              <div class="font-bold">Need help choosing a model?</div>
-              <div class="font-light">Explore the differences in screen size and battery life</div>
-            </div>
-            <div>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-              </svg>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <% end %>
   <% end %>
-<% end %>
+</div>
