--- a/app/views/components/react.html.erb
+++ b/app/views/components/react.html.erb
@@ -8,20 +8,20 @@
 
   <div data-controller="react"
        data-react-selector-value="greeting"
-       data-react-props-value='{"message": "Hello World from JSX Stimulus"}'>
-    <div data-react-target="insert"></div>
+       data-react-props-value='{"message": "Hello World from JSX Stimulus"}'
+       data-react-target="insert">
   </div>
 
   <div data-controller="react"
        data-react-selector-value="counter"
        data-react-props-value='{"initialValue": 3}'
-       class="mt-8">
-    <div data-react-target="insert"></div>
+       class="mt-8"
+       data-react-target="insert">
   </div>
   <div data-controller="react"
        data-react-selector-value="counter"
        data-react-props-value='{"initialValue": 5}'
-       class="mt-8">
-    <div data-react-target="insert"></div>
+       class="mt-8"
+       data-react-target="insert">
   </div>
 <% end %>
