--- a/app/content/application/_nav.html.erb
+++ b/app/content/application/_nav.html.erb
@@ -17,7 +17,7 @@
     <span class="grow"></span>
   <% else %>
     <div class="text-center grow flex flex-col">
-      <a href="/" class="text-xl p-1 font-bold text-gray-400 hover:text-orange-600">
+      <a href="/" class="text-xl p-1 font-light text-gray-400 hover:text-orange-300">
         Anecdotes on Hotwire
       </a>
     </div>
