--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -6,7 +6,7 @@ hide_title: true
 sections:
   - ["概要", "introduction"]
   - ["考え方", "concepts"]
-  - ["コツ", "tips"]
+  - ["使い方やコツ", "tips"]
   - ["パフォーマンス", "performance"]
   - ["その他", "others"]
 ---
